ChatZilla website update:  - Fix Spanish localisation URL.  - Add large gap to bottom of FAQ, so anchor scrolling works for the last few items (depending on screen size).  - Reworked some commonly-referenced FAQ entries (connect, join, proxy) and added password and find-channel.

--- a/common/style/faq.css
+++ b/common/style/faq.css
@@ -68,3 +68,7 @@ div.tip .icon, div.note .icon, div.warning .icon {
 table.left-align th, table.left-align td {
 	text-align: left;
 }
+
+#footer {
+	margin-bottom: 100%;
+}
